tests/test159.rael.exp
Error [tests/test159.rael:1:8]: Unrecognized token
| log 123.
|        ^
